--- a/index1.css
+++ b/index1.css
@@ -1,104 +1,152 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap');
 
-body 
-{
+body {
     font-family: 'Roboto', sans-serif;
-    padding-right: 0%;
+    padding: 0%;
     margin: 0%;
 }
 
+a {
+    color: white;
+    text-decoration: none;
+}
 
-nav
-{
+#banner {
+    width: 95em;
+    height: 50em;
+}
+
+#fruits1 {
     position: absolute;
-    left: 400px;
+    right: 880px;
+    top: 0.5px;
+    weigt: 300px;
+    height: 400px;
+
+}
+
+
+.black {
+    text-decoration: none;
+    color: black;
+}
+
+
+
+nav {
+    position: absolute;
+    left: 200px;
     display: flex;
-    width: 60%;
-    max-height:  150px;
+    width: 50%;
+    max-height: 150px;
     top: 2px;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
-    width: 70%
+    width: 70%;
+
+}
+
+.badge {
+    position: absolute;
+    top: 50px;
+    right: 10px;
+    height: 15px;
+    width: 15px;
+    font-size: 10px;
+    background-color: #14462d;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
 }
 
 
-header 
-{
+header {
     position: relative;
-    background-image: url("img/banner.jpg");
-    min-height:  98vh;
+    min-height: 90vh;
 }
 
 
-.navtext
-{
+.navtext {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     width: 50%;
     list-style: none;
-   
+
 }
 
- 
 
-.navicons ul 
-{
+
+.navicons ul li {
+    color: #afe223;
+    background-color: white;
+    border-radius: 50%;
+    height: 35px;
+    width: 38px;
+    padding-bottom: 5px;
     display: flex;
     flex-direction: row;
     align-items: center;
-
     list-style: none;
     justify-content: center;
-    color: #afe223;
-    justify-content: space-evenly;
+
+    margin-right: 10px;
 }
 
 
 
-#cherche, #user, #heart, #shop 
-{
-    background-color: white;
+#cherche,
+#user,
+#heart1,
+#shop {
+    color: #afe223;
     border-radius: 50%;
     width: 30px;
     height: 30px;
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 20px;
-   
+    margin: 10px;
+
 }
 
 
-.flex 
-{
+.flex {
     display: flex;
     flex-direction: row;
 }
 
-.navigation 
-{
+.navigation {
     display: flex;
     justify-content: space-around;
-}*
-
-.textheader 
-{
-   position: absolute;
-   top: 35%;
-   left: 25%;
 }
 
+.textheader {
+    position: absolute;
+    top: 25%;
+    left: 20%;
+    color: black;
+
+}
 
 .bienvenue {
-    color:  #afe223 ;
-    font-size: 25px;
+    color: #afe223;
+    font-size: 20px;
 }
 
 h1 {
-    font-size: 50px;
-    font-weight:400
+    font-size: 65px;
+    font-weight: 400;
+    margin-bottom: -10%;
+    margin-top: -10px;
+}
+
+h4 {
+    font-size: 15px;
+    font-weight: 40;
+
 }
 
 .click {
@@ -106,7 +154,410 @@ h1 {
 }
 
 .course {
-    
+    position: relative;
+    display: flex;
+    left: -120px;
+    margin-left: 25%;
+    margin-top: -5px;
+    margin-bottom: 5%;
+    color: white;
+}
+
+.courses {
+    font-size: 15px;
+    background-color: #afe223;
+    color: white;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    text-align: center;
+    width: 200px;
+    height: 50px;
+    margin-right: 17px;
+    padding-left: 30px;
+    padding-right: 30px;
+
+}
+
+
+
+.informations {
+    font-size: 15px;
+    background-color: #14462d;
+    color: white;
+
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+
+    width: 200px;
+    height: 50px;
+    text-align: center;
+    padding-left: 50px;
+    padding-right: 20px;
+
+}
+
+
+/***********************PARTIE 2*********************/
+
+.main {
+    min-height: 98vh;
+    min-width: 98vh;
+}
+
+.star {
+    color: yellow;
+}
+
+
+.vegetables,
+.drink,
+.beauty {
+
+    width: 200px;
+    height: 100px;
+    padding: 100px;
+    padding-left: 50px;
+    font-size: 25px;
+
+
+}
+
+.vegetables {
+    background: #92ddd8;
+    background-image: url("/evaluation-1-css/img/legumes.png");
+    background-repeat: no-repeat;
+    background-position: 100px 4px;
+    margin-right: -9%;
+}
+
+.drink {
+    background-color: #fb9823;
+    background-image: url("/evaluation-1-css/img/boisson.png");
+    background-repeat: no-repeat;
+    background-position: 75px;
+}
+
+
+.beauty {
+    background-color: #afe223;
+    background-image: url("/evaluation-1-css/img/beaute.png");
+    background-repeat: no-repeat;
+    background-position: 55px -10px;
+    margin-left: -9%;
+}
+
+
+
+.containers1 {
+    display: flex;
+    justify-content: space-evenly;
+    color: white;
+    padding-top: 100px;
+}
+
+span {
+    font-size: 10px;
+}
+
+h2 {
+    text-align: center;
+    color: #afe223;
+    font-size: 15px;
+    margin-top: 100px;
+}
+
+h3 {
+    text-align: center;
+    font-size: 35px;
+    margin-top: -20px;
+
+
+}
+
+/***********************PARTIE 3*********************/
+
+.hot{
+    background-color: rgb(202, 0, 0);
+    color: white;
+    width: 20px;
+    height: 10px;
+    padding:5px 10px;
+    position: absolute;
+    top: 21px;
+    left:145.5px;
+
+}
+
+.containers2,
+.containers3 {
     display: flex;
     justify-content: space-around;
+}
+
+
+.boeuf,
+.brocolis,
+.fraise,
+.miel,
+.lait,
+.mangue {
+    background-color: #f6fafb;
+    width: 400px;
+    height: 500px;
+    text-align: center;
+    margin-top: 20px;
+}
+
+
+/*marge de gauche et droite*/
+
+.boeuf,
+.miel {
+    margin-right: -275px;
+}
+
+
+.fraise,
+.mangue {
+    margin-left: -275px;
+}
+
+/*typographie du text*/
+.green {
+    color: #afe223;
+
+}
+
+.rayé {
+    text-decoration: line-through;
+    color: rgb(195, 195, 195)
+}
+
+.ajouter {
+    background-color: #14462d;
+    height: 20px;
+    width: 20px;
+    color: white;
+    padding: 5px 15px;
+}
+
+
+.fa-solid {
+
+    width: 30px;
+    padding-top: 10px;
+
+
+}
+
+.rayé, .green{
+    font-size: 15px;
+}
+
+h4{
+    font-size: 20px;
+}
+.containers2 {
+    position: relative
+}
+
+#heart2 {
+    position: absolute;
+    top: 30px;
+    left: 490px;
+    color: grey;
+    background-color: white;
+    border-radius: 50%;
+    padding-bottom: 8px;
+    weight: 10px;
+
+}
+
+
+#heart3 {
+    position: absolute;
+    top: 30px;
+    left: 900px;
+    color: grey;
+    background-color: white;
+    border-radius: 50%;
+    padding-bottom: 8px;
+    weight: 10px;
+
+}
+
+#heart4 {
+    position: absolute;
+    top: 30px;
+    left: 1320px;
+    color: grey;
+    background-color: white;
+    border-radius: 50%;
+    padding-bottom: 8px;
+    weight: 10px;
+
+}
+
+#heart5 {
+    position: absolute;
+    top: 30px;
+    left: 490px;
+    color: grey;
+    background-color: white;
+    border-radius: 50%;
+    padding-bottom: 8px;
+    weight: 10px;
+
+}
+
+#heart6 {
+    position: absolute;
+    top: 30px;
+    left: 900px;
+    color: grey;
+    background-color: white;
+    border-radius: 50%;
+    padding-bottom: 8px;
+    weight: 10px;
+
+}
+
+#heart7 {
+    position: absolute;
+    top: 30px;
+    left: 1320px;
+    color: grey;
+    background-color: white;
+    border-radius: 50%;
+    padding-bottom: 8px;
+    weight: 10px;
+
+}
+
+#heart2:hover,
+#heart3:hover,
+#heart4:hover,
+#heart5:hover,
+#heart6:hover,
+#heart7:hover {
+    cursor: pointer;
+    background-color: #afe223;
+    color:white;
+
+}
+
+ul {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 10px auto;
+    padding-bottom: 5px;
+}
+
+.fraise img {
+    padding-top: 50px;
+    width: 300px;
+    height: 200px;
+}
+
+.brocolis img {
+    padding-top: 4px;
+    width: 350px;
+    height: 250px;
+}
+
+.lait img {
+    padding-top: -1.9px;
+    width: 400px;
+    height: 300px;
+}
+
+.mangue img {
+    padding-top: -2.1px;
+    width: 400px;
+    height: 300px;
+}
+
+.boeuf:hover,
+.brocolis:hover,
+.fraise:hover,
+.miel:hover,
+.lait:hover,
+.mangue:hover,
+.ajouter:hover {
+    cursor: pointer;
+    transform: border;
+    border: 2px solid #afe223;
+}
+
+.heart :hover {
+    cursor: pointer;
+
+}
+
+#plein {
+    color: rgb(255, 217, 0);
+}
+
+.fa-solid {
+    color: rgba(182, 182, 182, 0.712);
+}
+
+/******************FOOTER*******************/
+
+
+
+footer {
+    background-color: #afe223;
+    border-left: 6px solid yellow;
+    background-repeat: no-repeat;
+    background-position: right;
+    height: 200px;
+    width: 74%;
+    margin-left: 13%;
+    margin-top: 7%;
+    color: white;
+}
+
+
+.img {
+    width: 22.5em;
+    border-top-left-radius: 700px;
+    border-left: 25px solid rgb(200, 255, 0);
+}
+
+.flex {
+    display: flex;
+    justify-content: space-between;
+}
+
+
+
+
+.promo {
+    padding-top: 65px;
+    padding-left: 100px;
+
+}
+
+strong {
+    font-size: 35px;
+    color: yellow;
+}
+
+.pop {
+    color: white;
+    display: flex;
+    align-items: center;
+    font-size: 30px;
+}
+
+ul,
+li,
+.fa-solid {
+    list-style: none;
+    display: flex;
+
 }
